deployment/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flight-search-prod
  labels:
    name: flight-search-prod
    environment: production
